--- a/.env
+++ b/.env
@@ -8,19 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=pgsql
-# DB_HOST=127.0.0.1
-# DB_PORT=5432
-# DB_DATABASE=digital_insects
-# DB_USERNAME=postgres
-# DB_PASSWORD=password
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=digital_insects
+DB_USERNAME=postgres
+DB_PASSWORD=password
 
 
-DB_USERNAME = doadmin
-DB_PASSWORD =  AVNS_7C7Oa7wzPVcMzRBl_Me
-DB_HOST =central-db-do-user-13333995-0.b.db.ondigitalocean.com
-DB_PORT = 25060
-DB_DATABASE =dgicdb
+# DB_USERNAME = doadmin
+# DB_PASSWORD =  AVNS_7C7Oa7wzPVcMzRBl_Me
+# DB_HOST =central-db-do-user-13333995-0.b.db.ondigitalocean.com
+# DB_PORT = 25060
+# DB_DATABASE =dgicdb
 # sslmode = require
 
 BROADCAST_DRIVER=log
